Source/WebCore/rendering/RenderBox.cpp
@@ -4034,4 +4034,11 @@ bool RenderBox::hasRelativeDimensions() const
             || style()->minHeight().isPercent() || style()->minWidth().isPercent();
 }
 
+bool RenderBox::hasRelativeLogicalHeight() const
+{
+    return style()->logicalHeight().isPercent()
+            || style()->logicalMinHeight().isPercent()
+            || style()->logicalMaxHeight().isPercent();
+}
+
 } // namespace WebCore
